# packages

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: detect.rs  display.rs  main.rs  scanner.rs  types.rs
src/ecosystems/: go_lang.rs  mod.rs  node.rs  python.rs  ruby.rs  rust_lang.rs
