[package]
name = "pkgcheck"
version = "0.1.0"
edition = "2021"
description = "Check whether all packages required by the current project are installed"

[dependencies]
crossterm = "0.28"
tabled = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
ureq = { version = "2", features = ["json"] }
